syntax = "proto3";
import "google/protobuf/wrappers.proto";
option java_multiple_files = true;
option java_package = "io.grpc.vote";
option java_outer_classname = "Vote";
option objc_class_prefix = "HLW";

package Vote;

// The greeting service definition.
service Greeter {
    rpc GetId (GetIdRequest) returns (GetIdResponse) {

    }
    rpc AskForVote (VoteRequest) returns (VoteReply) {
    }
    rpc UpdateLog (UpdateLogRequest) returns (UpdateLogReply) {
    }
    rpc AppendLog (UpdateLogRequest) returns (UpdateLogReply) {
    }
    rpc RemoveLog (UpdateLogRequest) returns (UpdateLogReply) {

    }
    //api for user
    rpc Store (StoreRequest) returns (StoreResponse) {
    }
    rpc Get (GetRequest) returns (GetResponse) {
    }
    rpc Size (SizeRequest) returns (SizeResponse) {

    }
    rpc Remove (RemoveRequest) returns (RemoveResponse) {

    }
    rpc ContainsKey (ContainsRequest) returns (ContainsResponse) {
    }

    rpc ContainsValue (ContainsRequest) returns (ContainsResponse) {
    }
    rpc Values (ValuesRequest) returns (ValuesResponse) {
    }
    rpc Keys (KeysRequest) returns (KeysResponse) {
    }
    rpc Entries (EntriesRequest) returns (EntriesResponse) {

    }
    rpc Command (CommandRequest) returns (CommandResponse) {

    }

    //    rpc CommitMessage(VoteRequest) returns(VoteReply){}
}


message CommandRequest {
    string command = 1;
}
message CommandResponse {
    string control = 1;
}

message EntriesRequest {

}

message EntriesResponse {
    repeated DataEntry entry = 1;
}

message KeysRequest {

}

message KeysResponse {
    repeated string key = 1;
}

message ValuesResponse {
    repeated string value = 1;
}

message ValuesRequest {

}

message GetIdRequest {

}

message GetIdResponse {
    string id = 1;
}

message ContainsRequest {
    string content = 1;
}

message ContainsResponse {
    bool status = 1;
}

message RemoveRequest {
    string key = 1;
}

message RemoveResponse {
    bool status = 1;
}

message SizeRequest {

}

message SizeResponse {
    int32 size = 1;
}

message GetRequest {
    string key = 1;
}
message GetResponse {
    google.protobuf.StringValue value = 1;
}
message DataEntry {
    string key = 1;
    google.protobuf.StringValue value = 2;
}
message LogEntry {
    int32 index = 1;
    int32 term = 2;
    string key = 3;
    google.protobuf.StringValue value = 5;
    int32 version = 4;
}

message StoreRequest {
    DataEntry entry = 1;
}

message StoreResponse {
    bool status = 1;
}

message UpdateLogRequest {

    LogEntry logEntry = 1;
    DataEntry entry = 2;
    string id = 3;
}

message UpdateLogReply {
    bool status = 1;
}

message VoteRequest {
    int32 port = 1;
    int32 term = 2;

}

message VoteReply {
    bool status = 1;
}